@@ -75,6 +75,15 @@ count2 n/*0:1*/::int = count2 (n/*0:1*/-1);
 }
 count2 100;
 0
+count3 n/*0:1*/::int = if n/*0:1*/<=0 then n/*0:1*/ else count3 (n/*0:1*/-1);
+{
+  rule #0: count3 n::int = if n<=0 then n else count3 (n-1)
+  state 0: #0
+	<var>::int state 1
+  state 1: #0
+}
+count3 100;
+0
 test x/*0:1*/::int = t/*0*/ x/*0:1*/ with t n/*0:1*/::int = t/*1*/ (-n/*0:1*/) if n/*0:1*/<0; t n/*0:1*/::int = u/*0*/ (n/*0:1*/+2) with u _/*0:1*/ = n/*1:1*/+1 {
   rule #0: u _ = n+1
   state 0: #0
