@@ -1,3 +1,11 @@
+2008-05-25  Albert Graef  <Dr.Graef@t-online.de>
+
+	* interpreter.cc: Make toplevel if-then-else properly
+	tail-recursive. Thus, e.g., the following function will now run in
+	constant stack space: count x = if x<=0 then x else count (x-1);
+	This also works with nested if-then-else constructs, as long as
+	they form the right-hand side of an equation.
+
 2008-05-24  Albert Graef  <Dr.Graef@t-online.de>
 
 	* interpreter.cc, runtime.cc: Fix more memory allocation bugs in
